agregar common popups p/ distintos estados

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import "./components/Login/style.module.scss";
 @import "./commons/Navbar/style.module.scss";
+@import "./commons/popup-successful-reservation/style.module.scss";
 
 body {
   margin: 0;
