--- a/src/components/Register/style.module.scss
+++ b/src/components/Register/style.module.scss
@@ -1,11 +1,39 @@
 .divs {
   display: flex;
-  width: 1368px;
+  justify-content: center;
+  height: 100vh;
+
+  display: flex;
+  width: 100%;
   padding-bottom: 0px;
   flex-direction: column;
   align-items: center;
   gap: 48px;
   background: var(--White, #fff);
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  align-self: stretch;
+}
+
+.rowForm {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+  justify-content: space-between;
+}
+
+.allInputs {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2px;
+  flex: 1;
 }
 
 .f {
@@ -28,19 +56,18 @@
   align-self: stretch;
 }
 
-// .head {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   gap: 4px;
-//   align-self: stretch;
-// }
-
 .none {
   background-color: transparent;
   display: flex;
   align-items: center;
   border: none;
+  flex: 1 0 0;
+  color: var(--Principal, #a442f1);
+  font-variant-numeric: slashed-zero;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 16px;
 }
 
 .none:hover {
@@ -53,6 +80,124 @@
   border-bottom: 1px solid #e1e1e1;
 }
 
+.textInputs {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  align-self: stretch;
+  color: var(--Black, #000);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  flex: 1 0 0;
+}
+
+.marg {
+  margin-bottom: 0px;
+  margin-top: 10px;
+}
+
+.marg2 {
+  color: var(--Grey-7, #6e6e6e);
+  margin-bottom: 0px;
+  margin-top: 10px;
+}
+
+.textInputsErr {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  align-self: stretch;
+  color: var(--Error, #e53939);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  flex: 1 0 0;
+}
+
+.inputMail {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2px;
+  align-self: stretch;
+  label {
+    width: 100%;
+  }
+  input {
+    outline: none;
+    width: 560px;
+    border-radius: 8px;
+    border: 1px solid var(--Grey-3, #e1e1e1);
+    display: flex;
+    padding: 12px 8px 12px 12px;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+  }
+  input:hover {
+    flex: 1 0 0;
+    border: 1px solid var(--Grey-5, #afafaf);
+    background: var(--White, #fff);
+  }
+  input:focus {
+    border: 1px solid var(--Principal, #a442f1);
+  }
+}
+
+.inputPassword {
+  border: none;
+  outline: none;
+}
+
+.focus {
+  border-radius: 8px;
+  display: flex;
+  padding: 12px 8px 12px 12px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  width: 230px;
+  outline: none;
+  border: 1px solid var(--Principal, #a442f1);
+}
+
+.inputArea {
+  border-radius: 8px;
+  border: 1px solid var(--Grey-3, #e1e1e1);
+  display: flex;
+  padding: 12px 8px 12px 12px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  width: 230px;
+  outline: none;
+}
+
+.err {
+  border-radius: 8px;
+  display: flex;
+  padding: 12px 8px 12px 12px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  width: 230px;
+  outline: none;
+  border: 1px solid var(--Error, #e53939);
+}
+
+.inputArea:hover {
+  flex: 1 0 0;
+  border: 1px solid var(--Grey-5, #afafaf);
+  background: var(--White, #fff);
+}
+
+.inputArea:focus {
+  border: 1px solid var(--Principal, #a442f1);
+}
+
 .text {
   font-feature-settings: "case" on, "ss01" on;
   font-family: Roboto;
@@ -60,6 +205,17 @@
   font-style: normal;
   font-weight: 500;
   line-height: 16px;
+}
+
+.textTittle {
+  align-self: stretch;
+  color: var(--Black, #000);
+  text-align: center;
+  font-variant-numeric: slashed-zero;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px;
 }
 
 .text1 {
@@ -83,11 +239,27 @@
   color: var(--xito, #00a541);
 }
 
-.err {
-  color: var(--Error, #e53939);
+.row1 {
+  color: var(--xito, #00a541);
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  flex: 1 0 0;
 }
 
-.row1 {
+.row2 {
+  color: var(--Error, #e53939);
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  flex: 1 0 0;
+}
+
+.row3 {
+  color: var(--Grey-7, #6e6e6e);
+  font-size: 12px;
   display: flex;
   align-items: center;
   gap: 4px;
@@ -105,7 +277,25 @@
   background: var(--Grey-1, #f5f5f5);
 }
 
-.btnLog {
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
+}
+
+.rowOne {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+}
+
+.btnSingIn {
+  height: 44px;
+  color: #fff;
+  font-size: 16px;
   display: flex;
   padding: 12px 24px;
   justify-content: center;
@@ -115,4 +305,26 @@
   border-radius: 8px;
   background: rgba(164, 66, 241, 0.1);
   border: none;
+  border-radius: 8px;
+  background: var(--Principal, #a442f1);
+}
+
+.btnLog {
+  height: 44px;
+  display: flex;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  align-self: stretch;
+  border-radius: 8px;
+  background: rgba(164, 66, 241, 0.1);
+  border: none;
+  color: var(--Principal, #a442f1);
+  text-align: center;
+  font-variant-numeric: slashed-zero;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
 }
