--- a/src/components/reservationconfirmed/index.scss
+++ b/src/components/reservationconfirmed/index.scss
@@ -1,220 +1,215 @@
-.contentMessaje{
-display: flex;
-width: 1176px;
-height: 236px;
-flex-direction: column;
-align-items: center;
-gap: 24px;
-margin: 144px 96px 56px 96px;
+.contentMessaje {
+  display: flex;
+  margin: 4% 0px 3.5% 0px;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
   align-self: stretch;
 }
 .contentMessaje > i {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-.contentMessaje >h1 {
+.contentMessaje > h1 {
   margin: 0px;
 }
 .contentMessaje > p {
   color: var(--Grey-8, #505050);
-text-align: center;
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 20px;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  width: 40%;
 }
-h1{
-  color: var(--Principal, #A442F1);
-text-align: center;
-font-variant-numeric: slashed-zero;
-font-family: Roboto;
-font-size: 26px;
-font-style: normal;
-font-weight: 600;
-line-height: 32px;
+h1 {
+  color: var(--Principal, #a442f1);
+  text-align: center;
+  font-variant-numeric: slashed-zero;
+  font-family: Roboto;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 32px;
 }
 
-.messaje{
+.messaje {
   color: var(--Grey-8, #505050);
-text-align: center;
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 20px;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
 }
-.impresion{
-border-radius: 8px;
-background: var(--Principal, #A442F1);
-color: var(--White, #FFF);
-text-align: center;
-font-variant-numeric: slashed-zero;
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 20px;
+.impresion {
+  border-radius: 8px;
+  background: var(--Principal, #a442f1);
+  color: var(--White, #fff);
+  text-align: center;
+  font-variant-numeric: slashed-zero;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
 }
-.contentReservation{
-display: flex;
-width: 1176px;
-flex-direction: column;
-align-items: flex-start;
-gap: 32px;
-margin: 144px 96px 56px 96px;
-border-top: 2px sold grey;
+.contentReservation {
+  display: flex;
+  // width: 1176px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 3vh;
+  margin: 0% 7%;
+  border-top: 2px sold grey;
 }
 .contentReservation > section {
   margin-top: 32px;
 }
-.contentPedido{
+.contentPedido {
   display: flex;
-  width: 977px;
+  width: 100%;
   flex-direction: row;
-  align-items: flex-start;
   gap: 12px;
   height: 96px;
-  align-items: center;
+  justify-content: space-between;
 }
-.itemPedido{
+.itemPedido {
   display: flex;
-  width: 977px;
   flex-direction: column;
-  align-items: flex-start;
-  margin-right: 16px;
+  justify-content: center;
 }
-.itemPedido >p {
-margin-top: 0px;
-color: var(--Grey-8, #505050);
-font-variant-numeric: ordinal;
-font-feature-settings: 'liga' off;
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 600;
-line-height: 20px; /* 142.857% */
+.itemPedido > p {
+  margin-top: 0px;
+  color: var(--Grey-8, #505050);
+  font-variant-numeric: ordinal;
+  font-feature-settings: "liga" off;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px; /* 142.857% */
 }
-.itemPedidoButton{
+.itemPedidoButton {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
-  flex: 1 0 0;
+  width: 14%;
 }
-.editReservationBtn{
- display: flex;
- width: 183px;
- height: 44px;
-padding: 12px 24px;
-justify-content: center;
-align-items: center;
-gap: 4px;
-align-self: stretch;
-border-radius: 8px;
-background: rgba(164, 66, 241, 0.10);
-color: var(--Principal, #A442F1);
-font-variant-numeric: slashed-zero;
-border: none;
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 20px;
+.editReservationBtn {
+  display: flex;
+  // width: 183px;
+  height: 44px;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  align-self: stretch;
+  border-radius: 8px;
+  background: rgba(164, 66, 241, 0.1);
+  color: var(--Principal, #a442f1);
+  font-variant-numeric: slashed-zero;
+  border: none;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
 }
 
-.cancelReservationBtn{
-display: flex;
-padding: 12px 24px;
-justify-content: center;
-align-items: center;
-gap: 4px;
-align-self: stretch;
-width: 183px;
-height: 44px;
-color: var(--Error, #E53939);
-font-variant-numeric: slashed-zero;
-border-radius: 8px;
-border: none;
-background: var(--Grey-1, #F5F5F5);
-font-family: Roboto;
-font-size: 15px;
-font-style: normal;
-font-weight: 600;
-line-height: 20px;
+.cancelReservationBtn {
+  display: flex;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  align-self: stretch;
+  // width: 183px;
+  height: 44px;
+  color: var(--Error, #e53939);
+  font-variant-numeric: slashed-zero;
+  border-radius: 8px;
+  border: none;
+  background: var(--Grey-1, #f5f5f5);
+  font-family: Roboto;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
 }
-.contentInfo{
-display: flex;
-align-items: flex-start;
-gap: 48px;
-align-self: stretch;
+.contentInfo {
+  display: flex;
+  gap: 48px;
+  align-self: flex-start;
+  width: 48%;
 }
 .contentInfo > div {
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 12px;
-flex: 1 0 0;
-align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+  flex: 1 0 0;
+  align-self: stretch;
 }
-.item2{
-margin-right: 48px;
-margin-left: 48px;
-
+.item2 {
+  margin-right: 48px;
+  margin-left: 48px;
 }
-.item1 > h2{
+.item1 > h2 {
   color: var(--Black, #000);
-font-variant-numeric: slashed-zero;
+  font-variant-numeric: slashed-zero;
 
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 20px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
 }
 .item2 > h2 {
   color: var(--Black, #000);
-font-variant-numeric: slashed-zero;
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 20px;
+  font-variant-numeric: slashed-zero;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
 }
 
-.item1 > p{
+.item1 > p {
   color: var(--Grey-8, #505050);
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 20px;
-margin: 0px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 0px;
 }
 
-.item2 > p{
-color: var(--Grey-8, #505050);
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 20px;
-margin: 0px;
+.item2 > p {
+  color: var(--Grey-8, #505050);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 0px;
 }
-.itemPedido{
+.itemPedido {
   align-self: stretch;
 }
 .itemPedido > div > p {
   color: var(--Grey-8, #505050);
-font-variant-numeric: ordinal;
-font-feature-settings: 'liga' off;
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 600;
-line-height: 20px;
+  font-variant-numeric: ordinal;
+  font-feature-settings: "liga" off;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
 }
-.subitemPedido{
+.subitemPedido {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -222,7 +217,7 @@ line-height: 20px;
   align-self: stretch;
   margin-bottom: 0px;
 }
-.subitemPedido > h2{
+.subitemPedido > h2 {
   color: var(--Black, #000);
   font-variant-numeric: slashed-zero;
   font-family: Roboto;
@@ -232,7 +227,7 @@ line-height: 20px;
   line-height: 32px;
 }
 .subitemPedido > .numeroR {
-  color: var(--Principal, #A442F1);
+  color: var(--Principal, #a442f1);
   font-variant-numeric: slashed-zero;
   font-family: Roboto;
   font-size: 26px;
@@ -242,27 +237,31 @@ line-height: 20px;
 
   margin-left: 5px;
 }
-.itemPedido  > div >  p{
-
+.itemPedido > div > p {
   color: var(--Grey-8, #505050);
   font-variant-numeric: ordinal;
-  font-feature-settings: 'liga' off;
+  font-feature-settings: "liga" off;
   height: 20px;
   font-family: Roboto;
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
-  line-height: 20px; 
+  line-height: 20px;
   margin-top: 12px;
 }
-.impresion{
-display: flex;
-width: 382px;
-padding: 12px 24px;
-justify-content: center;
-align-items: center;
-gap: 4px;
-border-radius: 8px;
-background: var(--Principal, #A442F1);
-border: none
+.impresion {
+  display: flex;
+  width: 382px;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 8px;
+  background: var(--Principal, #a442f1);
+  border: none;
+  transition: all 0.5s ease;
+}
+
+.impresion:hover {
+  transform: scale(1.05);
 }
