--- a/src/components/Login/style.module.scss
+++ b/src/components/Login/style.module.scss
@@ -53,17 +53,18 @@
 
 .h4-form-login {
   margin-top: 24px;
+  margin-bottom: 0px;
   color: var(--Principal, #a442f1);
-  text-align: center;
+  // text-align: center;
   font-variant-numeric: slashed-zero;
   font-size: 16px;
   font-style: normal;
+  letter-spacing: 0;
   font-weight: 600;
-  line-height: 16px;
   transition: all 0.7s ease;
 }
 .h4-form-login:hover {
-  transform: scale(1.08);
+  transform: scale(1.03);
 }
 .login-button {
   margin-top: 1rem;
@@ -96,4 +97,12 @@
   letter-spacing: 0.7px;
   border-style: none;
   transition: all 0.5s ease;
+}
+.p-validation-error-login {
+  margin-top: 4%;
+  margin-bottom: 0px;
+  font-size: 0.9rem;
+  letter-spacing: 1px;
+  color: rgb(255, 52, 238);
+  text-align: center;
 }
