función creación de usuario, falta validación de password

--- a/src/components/Register/style.module.scss
+++ b/src/components/Register/style.module.scss
@@ -195,7 +195,8 @@
 }
 
 .row1 {
-  color: var(--xito, #00a541);
+  // color: var(--xito, #00a541);
+  color: #00a541;
   font-size: 12px;
   display: flex;
   align-items: center;
