--- a/src/commons/Navbar/style.module.scss
+++ b/src/commons/Navbar/style.module.scss
@@ -11,7 +11,7 @@
   color: var(--Principal, #a442f1);
   text-align: center;
   font-feature-settings: "case" on, "ss01" on;
-  font-size: 12px;
+  font-size: 1.6vh;
   font-style: normal;
   font-weight: 600;
   line-height: 16px; /* 133.333% */
@@ -29,7 +29,7 @@
 
 .navbar-button {
   display: flex;
-  padding: 0px 27px;
+  padding: 0px 32px;
   justify-content: center;
   align-items: center;
   align-self: stretch;
