--- a/src/commons/popup-reservation/style.module.scss
+++ b/src/commons/popup-reservation/style.module.scss
@@ -1,11 +1,11 @@
 .fake-container-popup {
-  height: 90vh;
+  height: 46%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  filter: none;
 }
-
 .popup-container {
   // border: 1px solid salmon;
   height: 30vh;
@@ -18,6 +18,8 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.12);
+  transition: all 1.5s ease;
+  scale: 0;
 }
 .popup-content-container {
   margin: 0px 30px;
@@ -64,4 +66,25 @@
 .popup-button:hover {
   transform: scale(1.05);
   background: var(--Principal, #8c29d8);
+}
+.make-reservation-container-inactive {
+  width: 100%;
+  position: fixed;
+  filter: blur(2px);
+}
+.fake-container-popup-inactive {
+  position: fixed;
+  z-index: -1;
+}
+.fake-container-popup-active {
+  position: fixed;
+  z-index: 1;
+  .popup-container {
+    scale: 1.2;
+  }
+}
+.body {
+  transition: filter 1s ease;
+  height: 85vh;
+  padding-top: 3%;
 }
