--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import "./components/Login/style.module.scss";
 @import "./commons/Navbar/style.module.scss";
 @import "./commons/popup-reservation/style.module.scss";
+@import "./components/RecoverPassword/style.module.scss";
 
 body {
   margin: 0;
