--- a/src/components/RecoverPassword/style.module.scss
+++ b/src/components/RecoverPassword/style.module.scss
@@ -1,7 +1,7 @@
 .recover-password-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   width: 100%;
   height: 85vh;
 }
@@ -19,7 +19,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding: 8vh;
+  padding: 0vh 8vh;
   h1 {
     margin: 10% 0 7% 0;
     letter-spacing: 2px;
@@ -55,4 +55,7 @@
 }
 .verification-container-div {
   margin-top: 5%;
+}
+.recover-password-container {
+  transition: filter 1s ease;
 }
