agrego parte de la funcionalidad y cambios de utils a assets

--- a/src/components/reservationconfirmed/index.scss
+++ b/src/components/reservationconfirmed/index.scss
@@ -231,10 +231,8 @@ h1 {
   font-variant-numeric: slashed-zero;
   font-family: Roboto;
   font-size: 26px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 32px;
-
+  align-content: center;
+  margin: 0px;
   margin-left: 5px;
 }
 .itemPedido > div > p {
