--- a/src/components/ConfirmationOfRegistration/index.scss
+++ b/src/components/ConfirmationOfRegistration/index.scss
@@ -1,1 +1,85 @@
-
+.bodyConfirmedRegister{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+}
+.formNewToken {
+  display: flex;
+  width: 580px;
+  padding: 32px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  border-radius: 12px;
+  background: var(--White, #fff);
+  box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.12);
+  margin: 0px auto;
+  margin:5vh
+}
+.formNewToken > input{
+width: 256px;
+height: 20px;
+padding: 12px 8px 12px 12px;
+align-items: center;
+gap: 8px;
+align-self: stretch;
+border-radius: 8px;
+border: 1px solid var(--Grey-3, #E1E1E1);
+background: var(--White, #FFF);
+margin: 0px auto;
+}
+.formNewToken > label {
+color: #CC6AFF;
+}
+.formNewToken > button {
+  width: 174px;
+  padding: 12px 24px;
+  gap: 4px;
+  border-radius: 8px;
+  margin: 0px auto;
+  background: var(--Secundario, #CC6AFF);
+  border-style: none;
+  margin:2vh;
+  color:white
+}
+.btn-New-Token{
+  display: flex;
+  width: 174px;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 8px;
+  margin: 0px auto;
+  background: var(--Secundario, #CC6AFF);
+  border-style: none;
+  margin:5vh
+}
+.btn-confirmedRegister{
+  display: flex;
+  width: 174px;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 8px;
+  margin: 0px auto;
+  background: var(--Secundario, #CC6AFF);
+  border-style: none;
+  margin:5vh
+}
+.btn-redireccion{
+  display: flex;
+  width: 174px;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 8px;
+  margin: 0px auto;
+  background: var(--Secundario, #CC6AFF);
+  border-style: none;
+  margin:5vh
+}
