--- a/src/components/CreateBranches/index.scss
+++ b/src/components/CreateBranches/index.scss
@@ -1,9 +1,9 @@
-.bodyContent{
+.bodyContent {
   width: 100%;
   height: 100%;
   margin: 0px;
 }
-.contentCreateBranches{
+.contentCreateBranches {
   display: flex;
   width: 878px;
   padding: 40px 40px 32px 40px;
@@ -11,99 +11,102 @@
   align-items: flex-start;
   gap: 16px;
   margin: 0px auto;
-  margin-top:160px ;
+  margin-top: 6%;
   margin-bottom: 120px;
   border-radius: 12px;
-  background: var(--White, #FFF);
+  background: var(--White, #fff);
   box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.08);
   color: var(--Black, #000);
   font-family: Roboto;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px; 
+  line-height: 20px;
 }
-.contentCreateBranches > div{
+.contentCreateBranches > div {
   margin: 0px auto;
 }
-.contentCreateBranches > .bloqueUno{
+.contentCreateBranches > .bloqueUno {
   display: flex;
   flex-direction: column;
 }
-.contentCreateBranches> div > input{
+.contentCreateBranches > div > input {
   width: 798px;
   height: 40px;
   border-radius: 8px;
-  border: 1px solid var(--Grey-3, #E1E1E1);
-  background: var(--White, #FFF);
-  
+  border: 1px solid var(--Grey-3, #e1e1e1);
+  background: var(--White, #fff);
 }
-.fila{
+.fila {
   display: flex;
   flex-direction: row;
 }
-.itemFila{
- display: flex;
- flex-direction: column;
- color: var(--Black, #000);
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 20px;
+.itemFila {
+  display: flex;
+  flex-direction: column;
+  color: var(--Black, #000);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
 }
-.itemFila > input{
+.itemFila > input {
   width: 387px;
- height: 40px;
- border-radius: 8px;
- border: 1px solid var(--Grey-3, #E1E1E1);
- background: var(--White, #FFF);
+  height: 40px;
+  border-radius: 8px;
+  border: 1px solid var(--Grey-3, #e1e1e1);
+  background: var(--White, #fff);
 }
 
-.horario{
+.horario {
   display: flex;
   flex-direction: row;
 }
-.itemHorario{
+.itemHorario {
   display: flex;
   flex-direction: column;
   width: 395px;
   height: 40px;
   margin-bottom: 15px;
   color: var(--Black, #000);
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 20px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .select-style {
-    width: 395px;
-    height: 42px;
-    font-size: 16px;
-    padding: 12px 8px 12px 12px;
-    border-radius: 8px;
-    border: 1px solid var(--Grey-3, #E1E1E1);
-    background: var(--White, #FFF);
-}
-
-.itemcierre{
- margin-left: 16px;
-}
-
-.sumitBtn{
+  width: 395px;
+  height: 42px;
+  font-size: 16px;
+  padding: 12px 8px 12px 12px;
   border-radius: 8px;
-  background: var(--Principal, #A442F1);
-  padding: 12px 24px;
+  border: 1px solid var(--Grey-3, #e1e1e1);
+  background: var(--White, #fff);
+}
+
+.itemcierre {
+  margin-left: 16px;
+}
+
+.sumitBtn {
   width: 807px;
+  padding: 12px 24px;
+  margin-top: 3%;
+  font-weight: 600;
+  text-align: center;
+  font-size: 20px;
+  letter-spacing: 2px;
+  color: var(--White, #fff);
+  background: var(--Principal, #a442f1);
   border-style: none;
-  color: var(--White, #FFF);
-text-align: center;
-font-variant-numeric: slashed-zero;
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 20px;
+  border-radius: 8px;
+  transition: all 0.7s ease;
+
+  &:hover {
+    background: var(--Principal, #8631c7);
+    transform: scale(1.05) translateY(-8px);
+  }
 }
