--- a/src/components/RecoverPassword/style.module.scss
+++ b/src/components/RecoverPassword/style.module.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: flex-end;
   width: 100%;
-  height: 85vh;
+  margin-top: 4%;
 }
 .recover-password-content-container {
   display: flex;
