--- a/src/components/Register/style.module.scss
+++ b/src/components/Register/style.module.scss
@@ -161,6 +161,21 @@
 }
 
 .warning {
+  width: 540px;
+  margin-top: 12px;
+  display: flex;
+  padding: 16px 20px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+  align-self: stretch;
+  border-radius: 8px;
+  background: var(--Grey-1, #f5f5f5);
+}
+
+.warningP {
+  width: 764px;
+  margin-top: 12px;
   display: flex;
   padding: 16px 20px;
   flex-direction: column;
@@ -369,4 +384,87 @@
 
 .error {
   margin: 0%;
+}
+
+.password1 {
+  width: 100%;
+}
+
+.password {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+}
+
+.inputAreaP {
+  border-radius: 8px;
+  border: 1px solid var(--Grey-3, #e1e1e1);
+  display: flex;
+  padding: 1px 8px 1px 12px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  width: 372px;
+  height: 40px;
+  outline: none;
+}
+
+.inputAreaP:hover {
+  flex: 1 0 0;
+  border: 1px solid var(--Grey-5, #afafaf);
+  background: var(--White, #fff);
+}
+
+.inputAreaP:focus {
+  border: 1px solid var(--Principal, #a442f1);
+}
+
+.inputAreaPV {
+  border-radius: 8px;
+  border: 1px solid var(--Grey-3, #e1e1e1);
+  display: flex;
+  padding: 1px 8px 1px 12px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  width: 100%;
+  height: 40px;
+  outline: none;
+}
+
+.inputAreaPV:hover {
+  flex: 1 0 0;
+  border: 1px solid var(--Grey-5, #afafaf);
+  background: var(--White, #fff);
+}
+
+.inputAreaPV:focus {
+  border: 1px solid var(--Principal, #a442f1);
+}
+
+.focusP {
+  border-radius: 8px;
+  display: flex;
+  padding: 1px 8px 1px 12px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  height: 40px;
+  width: 372px;
+  outline: none;
+  border: 1px solid var(--Principal, #a442f1);
+}
+
+.errP {
+  border-radius: 8px;
+  display: flex;
+  padding: 1px 8px 1px 12px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  height: 40px;
+  width: 372px;
+  outline: none;
+  border: 1px solid var(--Error, #e53939);
 }
