--- a/src/components/CreateOperator/style.module.scss
+++ b/src/components/CreateOperator/style.module.scss
@@ -53,7 +53,8 @@
 }
 
 .inputArea:focus {
-  border: 1px solid var(--Principal, #a442f1);
+  outline: none;
+  border: 1.9px solid #8A26A6;
 }
 
 .inputMail {
@@ -82,7 +83,8 @@
     background: var(--White, #fff);
   }
   input:focus {
-    border: 1px solid var(--Principal, #a442f1);
+    outline: none;
+    border: 1.9px solid #8A26A6;
   }
 }
 
