--- a/src/components/Reports/style.module.scss
+++ b/src/components/Reports/style.module.scss
@@ -46,3 +46,68 @@
 .inputArea:focus {
   border: 1px solid var(--Principal, #a442f1);
 }
+
+.cont {
+  display: inline-flex;
+  align-items: flex-start;
+  gap: 16px;
+  div.number {
+    display: flex;
+    padding: 20px 20px 16px 20px;
+    align-items: flex-start;
+    gap: 8px;
+    align-self: stretch;
+    background: var(--Secundario, #cc6aff);
+    border-radius: 8px;
+    color: #fff;
+    div {
+      gap: 8px;
+      color: #fff;
+    }
+  }
+}
+
+.number {
+  display: flex;
+  width: 381px;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.pos {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.num {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin: 0;
+  width: 100%;
+}
+
+.text {
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  width: 100%;
+}
+
+.borderBtn {
+  display: flex;
+  width: 381px;
+  height: 41px;
+  justify-content: center;
+  align-items: center;
+  background: var(--Principal, #a442f1);
+}
+
+.icon {
+  width: 89px;
+  height: 89px;
+}
