--- a/src/components/Login/style.module.scss
+++ b/src/components/Login/style.module.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   background: var(--White, #fff);
   align-items: center;
+  position: unset;
 }
 .login-container {
   border-radius: 12px;
@@ -40,7 +41,7 @@
 }
 .inputLogin:focus {
   outline: none;
-  border: 1.9px solid #8A26A6;
+  border: 1.9px solid #8a26a6;
 }
 .inputLogin:hover {
   // transform: scale(1.01);
@@ -48,7 +49,7 @@
 }
 .inputLogin:hover:focus {
   outline: none;
-  border: 1.9px solid #8A26A6;
+  border: 1.9px solid #8a26a6;
 }
 
 .h4-form-login {
