--- a/src/components/ClientProfileEdition/ClientProfileEdit.scss
+++ b/src/components/ClientProfileEdition/ClientProfileEdit.scss
@@ -31,7 +31,7 @@
 .p-form-client {
   margin-bottom: 6px;
 }
-.input {
+.inputOperator{
   width: 100%;
   border: 0.8px solid rgba(128, 128, 128, 0.541);
   border-radius: 5px;
@@ -40,16 +40,16 @@
   color: rgb(48, 47, 47);
   transition: all 0.4s ease;
 }
-.input:focus {
+.inputOperator:focus {
   outline: none;
-  border: 1.9px solid rgb(56, 54, 54);
+  border: 1.9px solid #8A26A6;
 }
-.input:hover {
+.inputOperator:hover {
   border: 1px solid rgba(100, 100, 100, 0.774);
 }
-.input:hover:focus {
+.inputOperator:hover:focus {
   outline: none;
-  border: 1.9px solid rgb(56, 54, 54);
+  border: 1.9px solid #8A26A6;
 }
 
 .h4-form-edit {
@@ -62,6 +62,7 @@
   border-radius: 6px;
   background-color: #dabcf15c;
   transition: all 0.7s ease;
+  width: 40%;
   &:hover {
     background-color: rgb(218 188 241 / 71%);
     transform: translateX(-8px) scale(1.02);
@@ -90,20 +91,21 @@
   height: 0;
   border: 0.1px solid rgba(189, 185, 185, 0.541);
 }
-.inputs-div-container {
+.inputPassword{
   width: 100%;
+  border: 0.8px solid rgba(128, 128, 128, 0.541);
+  border-radius: 5px;
+  height: 2.5rem;
+  font-size: 1rem;
+  color: rgb(48, 47, 47);
+  transition: all 0.4s ease;
+}
+.inputs-div-container-password {
+  width: max-content;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content:space-between;
   gap: 20px;
-}
-.single-input-container {
-  width: 50%;
-  position: relative;
-  .eye-container {
-    top: 63%;
-    right: 2%;
-  }
 }
 .restrictions-container {
   margin: 3% 0;
