--- a/src/components/RecoverPassword/style.module.scss
+++ b/src/components/RecoverPassword/style.module.scss
@@ -4,6 +4,7 @@
   align-items: flex-end;
   width: 100%;
   margin-top: 4%;
+  position: fixed;
 }
 .recover-password-content-container {
   display: flex;
