--- a/src/components/AdministratorProfile/index.scss
+++ b/src/components/AdministratorProfile/index.scss
@@ -1,7 +1,7 @@
 .contentPerfilAdm {
   display: flex;
   width: 878px;
-  padding: 40px 40px 32px 40px;
+  //padding: 40px;
   flex-direction: column;
   align-items: flex-start;
   gap: 16px;
