--- a/src/components/AdministratorSucursalesList/style.module.scss
+++ b/src/components/AdministratorSucursalesList/style.module.scss
@@ -1,7 +1,7 @@
-.mid {
+.container{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: auto;
+  height: 70vh;
 }
