--- a/src/components/RecoverPassword/style.module.scss
+++ b/src/components/RecoverPassword/style.module.scss
@@ -60,3 +60,36 @@
 .recover-password-container {
   transition: filter 1s ease;
 }
+
+.inputLogin {
+  border: 0.8px solid rgba(128, 128, 128, 0.541);
+  border-radius: 5px;
+  height: 2.5rem;
+  font-size: 1rem;
+  color: rgb(48, 47, 47);
+  transition: all 0.4s ease;
+}
+.inputLogin:focus {
+  outline: none;
+  border: 1.9px solid #8a26a6;
+}
+.inputLogin:hover {
+  // transform: scale(1.01);
+  border: 1px solid rgba(100, 100, 100, 0.774);
+}
+.inputLogin:hover:focus {
+  outline: none;
+  border: 1.9px solid #8a26a6;
+}
+
+.err {
+  border-radius: 8px;
+  display: flex;
+  padding: 12px 8px 12px 12px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  width: 260px;
+  outline: none;
+  border: 1px solid var(--Error, #e53939);
+}
