agregar popup editar contraseña

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import "./components/Login/style.module.scss";
 @import "./commons/Navbar/style.module.scss";
 @import "./commons/Popup/style.module.scss";
+@import "./commons/PopupInput/style.module.scss";
 @import "./components/RecoverPassword/style.module.scss";
 
 body {
