agregar index page

--- a/src/commons/TableList/style.module.scss
+++ b/src/commons/TableList/style.module.scss
@@ -88,7 +88,7 @@ b {
   }
 }
 .myTooltip {
-  background-color: #a442f1;
+  // background-color: #a442f1;
   padding: 10px;
   border-radius: 10px;
 }
