--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 @import "./commons/Popup/style.module.scss";
 @import "./commons/PopupInput/style.module.scss";
 @import "./components/RecoverPassword/style.module.scss";
+@import "./components/IndexPage/style.module.scss";
 
 body {
   margin: 0;
