--- a/src/components/CancelReservation/style.module.scss
+++ b/src/components/CancelReservation/style.module.scss
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+
 
 div {
   color: #5f5f5f;
-  font-family: Roboto;
+  //font-family: sf;
 }
 
 .divleft {
