--- a/src/components/Reports/style.module.scss
+++ b/src/components/Reports/style.module.scss
@@ -26,6 +26,7 @@
 }
 
 .inputArea {
+  background-color: #fff;
   border-radius: 8px;
   border: 1px solid var(--Grey-3, #e1e1e1);
   display: flex;
@@ -53,7 +54,6 @@
   gap: 16px;
   div.number {
     display: flex;
-    padding: 20px 20px 16px 20px;
     align-items: flex-start;
     gap: 8px;
     align-self: stretch;
@@ -61,7 +61,6 @@
     border-radius: 8px;
     color: #fff;
     div {
-      gap: 8px;
       color: #fff;
     }
   }
@@ -74,10 +73,35 @@
   align-items: flex-start;
 }
 
-.pos {
+.pieOrder {
+  display: flex;
+  width: 381px;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+}
+
+.order {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  gap: 8px;
+}
+
+.pos {
+  padding: 20px 20px 16px 20px;
+  display: flex;
+  flex-direction: row;
+  width: 341px;
+}
+
+.divis {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
 }
 
 .num {
@@ -105,9 +129,56 @@
   justify-content: center;
   align-items: center;
   background: var(--Principal, #a442f1);
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
 .icon {
-  width: 89px;
-  height: 89px;
+  width: 1000px;
+  height: 1000px;
+}
+
+.pie {
+  display: flex;
+  width: 500px;
+  height: 370px;
+  padding: 16px 32px 100px 32px;
+  flex-direction: row;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 18px;
+  background: var(--White, #fff);
+  box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.12);
+}
+
+.pie2 {
+  display: flex;
+  width: 580px;
+  height: 450px;
+  padding: 16px 32px 16px 32px;
+  flex-direction: row;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 18px;
+  background: var(--White, #fff);
+  box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.12);
+}
+
+.block {
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  background: var(--Secundario, #a442f1);
+}
+
+.block2 {
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  background: var(--Secundario, #cc6aff);
+}
+
+.row {
+  padding-top: 66px;
+  flex-direction: column;
 }
