--- a/src/commons/PopupConfirm/style.module.scss
+++ b/src/commons/PopupConfirm/style.module.scss
@@ -8,8 +8,15 @@
   z-index: 1;
   background: rgba(0, 0, 0, 0.103); /* Fondo blanco semi-transparente */
   backdrop-filter: blur(5px); /* Efecto de desenfoque */
- 
-  transition: opacity 0.5s ease-in-out; 
+  transition: opacity 0.5s ease-in-out;
+    &.visible {
+        opacity: 1;
+      }
+    
+      &.hidden {
+        opacity: 0;
+        pointer-events: none; 
+      }
 }
 
 .container.appear{
@@ -30,4 +37,12 @@
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
+}
+
+.text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
 }
