--- a/src/components/Reports/style.module.scss
+++ b/src/components/Reports/style.module.scss
@@ -85,7 +85,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 8px;
+  gap: 20px;
 }
 
 .pos {
@@ -140,7 +140,7 @@
 
 .pie {
   display: flex;
-  width: 500px;
+  width: 514px;
   height: 370px;
   padding: 16px 32px 100px 32px;
   flex-direction: row;
@@ -181,4 +181,47 @@
 .row {
   padding-top: 66px;
   flex-direction: column;
+}
+
+.bar {
+  width: 1000px;
+  height: 200px;
+  display: flex;
+  padding: 16px 32px 16px 32px;
+  flex-direction: colum;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 18px;
+  background: var(--White, #fff);
+  box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.12);
+  margin-bottom: 120px;
+}
+
+.dir {
+  display: flex;
+  flex-direction: column;
+}
+
+.progressContainer {
+  width: 1000px;
+  height: 20px;
+  background-color: #f0f0f0;
+  margin-bottom: 10px;
+  overflow: hidden;
+  border-radius: 4px;
+}
+
+.progressBar {
+  height: 100%;
+  line-height: 20px;
+  text-align: center;
+  color: #fff;
+}
+
+.success {
+  background-color: #a442f1;
+}
+
+.info {
+  background-color: #e53939;
 }
